# rust-code

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  game_of_life.py  hello  install.sh  life  life.rs  rust-code
.githooks/: pre-commit
.github/workflows/: release.yml
.rust-code/context/: conventions.md  persona.md  rules.md
.tasks/: 001-implement-streaming.md  002-add-tests-for-parser.md  003-update-readme.md
crates/autoresearch/: Cargo.toml
crates/autoresearch/src/: lib.rs  main.rs
crates/baml-agent/: Cargo.toml  README.md
crates/baml-agent-tui/: Cargo.toml  README.md
crates/baml-agent-tui/src/: agent_task.rs  chat.rs  command_palette.rs  content_viewer.rs  focus.rs  headless.rs  help.rs  lib.rs  picker.rs  terminal.rs
crates/baml-agent/src/: agent_loop.rs  config.rs  doctor.rs  engine.rs  helpers.rs  hints.rs  intent_guard.rs  lib.rs  logging.rs  loop_detect.rs  prompt.rs  session.rs  telemetry.rs
crates/baml-agent/src/providers/: auth.rs  cli_proxy.rs  mod.rs
crates/baml-agent/src/session/: format.rs  meta.rs  mod.rs  store.rs  time.rs  traits.rs
crates/baml-agent/src/tools/: apply_patch.rs  bash.rs  fs.rs  mod.rs
crates/llm-json/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/llm-json/src/: lib.rs
crates/rc-baml/: Cargo.toml  README.md
crates/rc-baml/baml_src/: agent.baml  clients.baml  main.baml  memory.baml  principles.baml
crates/rc-baml/examples/: edge_cases.rs
crates/rc-baml/src/baml_client/: baml_source_map.rs  mod.rs
crates/rc-cli/: Cargo.toml  LICENSE  README.md
crates/rc-cli/.rust-code/: session_1772845806.jsonl
crates/rc-cli/examples/: test_sgr_backend.rs
crates/rc-cli/prompts/: system.md
crates/rc-cli/prompts/modes/: execute.md  plan.md
crates/rc-cli/prompts/roles/: explorer.md  reviewer.md  worker.md
crates/rc-cli/src/: agent.rs  app.rs  backend.rs  baml.rs  config.rs  fff_state.rs  fuzzy.rs  main.rs  preview.rs  rc_state.rs  tui.rs
crates/rc-cli/src/baml_client/: baml_source_map.rs
crates/rc-cli/src/baml_client/stream_types/: classes.rs  mod.rs  unions.rs
crates/rc-cli/src/baml_client/type_builder/: classes.rs  mod.rs
crates/rc-cli/src/baml_client/types/: classes.rs  mod.rs  unions.rs
crates/rc-cli/src/tools/: api_tool.rs  apply_patch_tool.rs  bash.rs  bash_tool.rs  checkpoint.rs  cli_provider.rs  codex_proxy.rs  config.rs  cost.rs  delegate.rs  delegate_tools.rs  edit_file_tool.rs  editor_tool.rs  finish_tool.rs  fs.rs  git.rs  git_tool.rs  lib.rs  mcp.rs  mcp_tool.rs  memory_tool.rs  mod.rs  project_tools.rs  read_file_tool.rs  search.rs  search_tool.rs  skills.rs  swarm_tools.rs  task_tool.rs  truncate.rs  write_file_tool.rs
crates/rc-core/: Cargo.toml
crates/rc-core/src/: agent.rs
crates/rc-tools/: Cargo.toml
crates/rc-tools/src/: bash.rs  editor.rs  fs.rs  git.rs  lib.rs
crates/sgr-agent/: Cargo.toml  README.md
crates/sgr-agent-core/: Cargo.toml  README.md
crates/sgr-agent-core/src/: agent_tool.rs  context.rs  lib.rs  schema.rs  tool.rs
crates/sgr-agent-ml/: Cargo.toml
crates/sgr-agent-ml/src/: classifier.rs  encoder.rs  knn.rs  lib.rs
crates/sgr-agent-tools/: Cargo.toml  README.md
crates/sgr-agent-tools/src/: apply_patch.rs  backend.rs  copy.rs  delete.rs  eval.rs  find.rs  helpers.rs  lib.rs  list.rs  local_fs.rs  mkdir.rs  mock_fs.rs  move_file.rs  plan.rs  prepend.rs  read.rs  read_all.rs  search.rs  shell.rs  skill_context.rs  tree.rs  trust.rs  write.rs
crates/sgr-agent-tui/: Cargo.toml  README.md
crates/sgr-agent-tui/src/: agent_task.rs  chat.rs  command_palette.rs  context_bar.rs  event.rs  focus.rs  headless.rs  help.rs  lib.rs  picker.rs  terminal.rs
crates/sgr-agent/examples/: agent_demo.rs  compare_oxide_genai.rs  compare_parsers.rs  edge_cases_sgr.rs  function_calling.rs  oxide_agent_test.rs  parser_offline_bench.rs  structured_output.rs  test_backends.rs  test_codex_flexible.rs  test_models.rs  test_weak_models.rs  two_modes.rs
crates/sgr-agent/src/: agent.rs  agent_loop.rs  agent_runtime.rs  agent_tool.rs  app_loop.rs  async_openai_client.rs  baml_parser.rs  benchmark.rs  cli_client.rs  client.rs  codegen.rs  coerce.rs  compaction.rs  context.rs  discovery.rs  evolution.rs  factory.rs  flexible_parser.rs  gemini.rs  genai_client.rs  hooks.rs  lib.rs  llm.rs  logging.rs  loop_detect.rs  memory.rs  model_info.rs  multimodal.rs  openai.rs  oxide_chat_client.rs  oxide_client.rs  prompt_loader.rs  prompt_template.rs  reasoning_tool.rs  registry.rs  retry.rs  router.rs  schema.rs  schema_simplifier.rs  skills.rs  (+9 more)
crates/sgr-agent/src/agents/: clarification.rs  flexible.rs  hybrid.rs  mod.rs  planning.rs  sgr.rs  tool_calling.rs
crates/sgr-agent/src/app_tools/: apply_patch.rs  fs.rs  git.rs  mod.rs
crates/sgr-agent/src/openapi/: caller.rs  mod.rs  registry.rs  search.rs  spec.rs
crates/sgr-agent/src/providers/: CLAUDE_PROXY_RESEARCH.md  auth.rs  cli_proxy.rs  codex_proxy.rs  config.rs  mod.rs
crates/sgr-agent/src/session/: meta.rs  mod.rs  simple.rs  stateful.rs  store.rs  time.rs  traits.rs
crates/sgr-agent/tests/: openapi_cloudflare.rs  openapi_integration.rs
crates/solograph/: Cargo.toml
crates/solograph/src/: deps.rs  lib.rs  repomap.rs  scanner.rs  symbols.rs
docs/: plan-dynamic-skill-context.md  plan-rc-cli-tool-migration.md  plan-sgr-agent-tools.md  prd.md
skills/autoresearch/: SKILL.md  base.py  dashboard.py  tool_selection.py
skills/autoresearch/test_cases/: decision_parser.json  system_prompt.json  tool_selection.json
skills/bighead/: SKILL.md
skills/delegate/: SKILL.md
skills/delegate/references/: agent-guide.md
skills/find-skills/: SKILL.md
skills/find-skills/references/: cli-commands.md
skills/plan/: SKILL.md
skills/plan/references/: analysis-prompts.md
skills/self-evolve/: SKILL.md
skills/skill-audit/: SKILL.md
skills/skill-audit/references/: checklist.md
skills/swarm-improve/: SKILL.md
src/components/: CityComparison.tsx
src/lib/__tests__/: compare.test.ts
weather/: Cargo.toml
weather/src/: api.rs  cli.rs  main.rs  models.rs
(+10 files in other folders)
