[workspace]
members = [
    "crates/rc-cli",
    "crates/rc-core",
    "crates/rc-tools",
    "crates/rc-baml"
, "rust-web-server"]
default-members = ["crates/rc-cli"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"

# UI / CLI
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
tui-textarea = "0.4"
nucleo = "0.5"
nucleo-matcher = "0.3"

# Tools / Core
ignore = "0.4" # for fast directory traversal / gitignore support
baml = "0.218.0" # using the version from the cli
