[workspace]
members = [
    "crates/rc-cli",
    "crates/solograph",
    "crates/sgr-agent-core",
    "crates/sgr-agent",
    "crates/sgr-agent-tools",
    "crates/sgr-agent-tui",
    "crates/sgr-agent-ml",
    "crates/autoresearch",
]
default-members = ["crates/rc-cli"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"

# UI / CLI
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
tui-textarea = "0.4"
# Fuzzy matcher: Smith-Waterman SIMD; shared with fff-search for single engine.
neo_frizbee = "0.10"

# Tools / Core
ignore = "0.4" # for fast directory traversal / gitignore support
rmcp = { version = "0.11.0", features = ["client", "transport-io", "transport-child-process"] }
fff-search = "0.6.1" # fast fuzzy file finder with frecency + query history (dmtrKovalenko/fff.nvim). Pure-Rust globset backend; zlob (Zig) requires a specific Zig version and is skipped.
