[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
