[package]
name = "autoresearch"
version = "0.1.0"
edition = "2024"
description = "Self-improving prompt optimization via Karpathy autoresearch pattern"
license = "MIT"

[dependencies]
sgr-agent = { version = "0.7.0", path = "../sgr-agent", features = ["genai"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "autoresearch"
path = "src/main.rs"
