[package]
name = "baml-agent-tui"
version = "0.4.0"
edition = "2021"
description = "Shared TUI shell for BAML SGR agents: chat panel, streaming, agent loop integration"
license = "MIT"
repository = "https://github.com/fortunto2/rust-code"
keywords = ["baml", "agent", "tui", "ratatui", "llm"]
categories = ["command-line-interface"]

[dependencies]
baml-agent = { version = "0.4.0", path = "../baml-agent", features = ["telemetry"] }
ratatui = "0.29.0"
crossterm = "0.27"
nucleo-matcher = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
anyhow = "1"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
