[package]
name = "baml-agent"
version = "0.2.0"
edition = "2021"
description = "Shared BAML agent runtime: config, registry, session persistence, loop detection"
license = "MIT"
repository = "https://github.com/fortunto2/rust-code"
keywords = ["baml", "agent", "llm", "structured-output"]
categories = ["development-tools"]

[features]
logging = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender", "dep:chrono"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["json"] }
tracing-appender = { version = "0.2", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
