[package]
name = "baml-agent"
version = "0.3.0"
edition = "2021"
description = "Shared BAML agent runtime: config, registry, session persistence, loop detection"
license = "MIT"
repository = "https://github.com/fortunto2/rust-code"
keywords = ["baml", "agent", "llm", "structured-output"]
categories = ["development-tools"]
readme = "README.md"

[features]
logging = ["dep:tracing-subscriber", "dep:tracing-appender", "dep:chrono"]
telemetry = [
    "dep:tracing-subscriber",
    "dep:tracing-log",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:chrono",
]
search = ["dep:nucleo-matcher"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }
tracing-appender = { version = "0.2", optional = true }
tracing-log = { version = "0.2", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["rt-tokio"] }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock"] }
nucleo-matcher = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
