[package]
name = "rust-code"
version = "0.5.0"
edition = "2024"
description = "AI-powered TUI coding agent written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fortunto2/rust-code"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui = "0.29.0"
syntect = "5.3.0"
syntect-tui = "3.0.6"
tokio-util = "0.7.18"
textwrap = "0.16.2"
tracing.workspace = true
ignore.workspace = true
nucleo.workspace = true
nucleo-matcher.workspace = true
baml.workspace = true
rmcp.workspace = true
baml-agent = { version = "0.3.0", path = "../baml-agent", features = ["telemetry", "search"] }
baml-agent-tui = { version = "0.3.0", path = "../baml-agent-tui" }
solograph = { version = "0.1.0", path = "../solograph" }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
