[package]
name = "rust-code"
version = "0.5.1"
edition = "2024"
description = "AI-powered TUI coding agent written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fortunto2/rust-code"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui = "0.29.0"
syntect = "5.3.0"
syntect-tui = "3.0.6"
tokio-util = "0.7.18"
textwrap = "0.16.2"
tracing.workspace = true
ignore.workspace = true
nucleo.workspace = true
nucleo-matcher.workspace = true
rmcp.workspace = true
solograph = { version = "0.1.0", path = "../solograph" }
sgr-agent = { version = "0.7.3", path = "../sgr-agent", features = ["agent", "session", "app-tools", "providers", "telemetry", "search", "genai", "oxide"] }
sgr-agent-tui = { version = "0.4.3", path = "../sgr-agent-tui" }
schemars = "0.8"
dirs = "5"
toml = "0.8"
base64 = "0.22"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
