[package]
name = "sgr-agent-tools"
version = "0.4.2"
edition = "2024"
description = "14 reusable file-system tools for sgr-agent based AI agents"
license = "MIT"
repository = "https://github.com/fortunto2/rust-code"
keywords = ["llm", "agent", "tools", "filesystem"]
categories = ["development-tools"]

[features]
default = []
eval = ["dep:boa_engine"]
shell = ["tokio/process", "tokio/time"]
patch = []
local-fs = ["tokio/fs"]

[dependencies]
sgr-agent-core = { version = "0.2.0", path = "../sgr-agent-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["rt"] }
regex = "1"
strsim = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
llm_json = { version = "1.0", path = "../llm-json" }

# Eval tool (optional, heavy)
boa_engine = { version = "0.20", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
