[package]
name = "sgr-agent-tui"
version = "0.4.4"
edition = "2024"
description = "Shared TUI shell for SGR agents: chat panel, streaming, agent loop integration"
license = "MIT"
repository = "https://github.com/fortunto2/rust-code"
keywords = ["sgr", "agent", "tui", "ratatui", "llm"]
categories = ["command-line-interface"]

[dependencies]
sgr-agent = { version = "0.7.6", path = "../sgr-agent", features = ["session", "telemetry"] }
ratatui = "0.29.0"
crossterm = "0.27"
neo_frizbee = "0.10"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
anyhow = "1"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
